# src/prueba/prueba.controller.ts
@@ -1,0 +1,41 @@
+import { Controller, Get, Post, Body, Patch, Param, Delete, Query } from '@nestjs/common';
+import { PruebaService } from './prueba.service';
+import { CreatePruebaDto } from './dto/create-prueba.dto';
+import { UpdatePruebaDto } from './dto/update-prueba.dto';
+
+@Controller('prueba')
+export class PruebaController {
+  constructor(private readonly pruebaService: PruebaService) {}
+
+  @Post()
+  create(@Body() createPruebaDto: CreatePruebaDto) {
+    return this.pruebaService.create(createPruebaDto);
+  }
+
+  @Get()
+  findAll(@Query('username') username: string) {
+    if(username === 'joseluiz' || username === 'josevalid') {
+      return {
+        isValid: true
+      }
+    }
+    return {
+      isValid: false
+    }
+  }
+
+  @Get(':id')
+  findOne(@Param('id') id: string) {
+    return this.pruebaService.findOne(+id);
+  }
+
+  @Patch(':id')
+  update(@Param('id') id: string, @Body() updatePruebaDto: UpdatePruebaDto) {
+    return this.pruebaService.update(+id, updatePruebaDto);
+  }
+
+  @Delete(':id')
+  remove(@Param('id') id: string) {
+    return this.pruebaService.remove(+id);
+  }
+}
